--- a/index.html
+++ b/index.html
@@ -20,28 +20,39 @@
         /* A4 Professional Invoice Styling */
         .invoice-a4 {
             width: 210mm;
-            min-height: 297mm;
+            height: 296mm; /* إجبار الفاتورة على مقاس صفحة واحدة */
+            max-height: 296mm;
             background: white;
             margin: 0 auto;
-            padding: 8mm 12mm; /* تقليل الحواف الجانبية والعلوية */
+            padding: 8mm 12mm;
             box-sizing: border-box;
             color: #000;
-            line-height: 1.3; /* تقليل ارتفاع السطر */
-            display: flex;
-            flex-direction: column;
+            line-height: 1.3;
+            position: relative; /* ضروري لتثبيت الفوتر بالأسفل */
+            overflow: hidden; /* منع خروج أي محتوى لصفحة ثانية */
         }
 
         .inv-header-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; border-bottom: 2px solid #142952; padding-bottom: 10px; margin-bottom: 15px; }
-        .inv-info-box { background: #f9fafb; padding: 10px; border-radius: 8px; border: 1px solid #f1f5f9; } /* تصغير الحواف الداخلية */
+        .inv-info-box { background: #f9fafb; padding: 10px; border-radius: 8px; border: 1px solid #f1f5f9; }
         .inv-table { width: 100%; border-collapse: collapse; margin: 10px 0; }
-        .inv-table th { background: #142952; color: white; padding: 6px 8px; text-align: right; font-size: 12px; border: 1px solid #142952; } /* تصغير الحواف الداخلية للجدول */
-        .inv-table td { border: 1px solid #e2e8f0; padding: 6px 8px; vertical-align: top; font-size: 11px; } /* تصغير الخط والحواف */
+        .inv-table th { background: #142952; color: white; padding: 6px 8px; text-align: right; font-size: 12px; border: 1px solid #142952; }
+        .inv-table td { border: 1px solid #e2e8f0; padding: 6px 8px; vertical-align: top; font-size: 11px; }
         .inv-total-row { background: #142952; color: white; font-weight: 900; }
         
         @media print {
+            @page { size: A4; margin: 0; } /* إلغاء هوامش المتصفح الافتراضية */
             .no-print { display: none !important; }
-            body { background: white; }
-            .invoice-a4 { width: 100%; margin: 0; padding: 5mm; border: none; }
+            body { background: white; margin: 0; padding: 0; }
+            .invoice-a4 { 
+                width: 210mm; 
+                height: 297mm; 
+                margin: 0; 
+                padding: 8mm 12mm; 
+                border: none; 
+                page-break-after: always; 
+                position: relative; 
+                overflow: hidden; 
+            }
             #capture-area { position: relative !important; left: 0 !important; top: 0 !important; width: 100% !important; }
         }
 
@@ -319,8 +330,8 @@
                     <div class="inv-info-box space-y-1">
                         <span class="text-gray-400 font-bold">مصدرة إلى :</span>
                         <p class="font-black text-base text-gray-900">{{ invoice.client.name }}</p>
+                        <p class="font-black text-[#142952] text-sm">{{ invoice.client.address }}</p>
                         <p class="font-bold text-gray-600">المملكة العربية السعودية، {{ invoice.client.city }}</p>
-                        <p class="font-black text-[#142952] text-xs">{{ invoice.client.address }}</p>
                         <p dir="ltr" class="font-black text-sm">{{ invoice.client.phone }}</p>
                     </div>
                     <div class="inv-info-box text-left space-y-1 border-r-4 border-[#142952]">
@@ -411,7 +422,7 @@
                     </div>
                 </div>
 
-                <div class="mt-auto text-center border-t pt-3">
+                <div class="absolute bottom-6 left-12 right-12 text-center border-t border-gray-200 pt-3 bg-white">
                     <p class="text-gray-400 font-black italic text-[11px] mb-2">شكراً لثقتكم بهوية بيتك - نسعد بخدمتكم دائماً</p>
                     <div class="flex justify-center gap-8 text-[9px] font-bold text-gray-500">
                         <p>📞 +966 54 478 2301</p>
